tests/macros/list/extension.stderr
error: option `extension` does not exist for kind `list`
 --> $DIR/extension.rs:2:44
  |
2 |     let q = inquisition::questions![list { extension: todo!() }];
  |                                            ^^^^^^^^^
