tests/macros/list/extension.rs
fn main() {
    let q = inquisition::questions![list { extension: todo!() }];
}
